# egui-animation-test

./: .gitignore  Cargo.toml
src/: main.rs
